@@ -304,6 +304,12 @@ Although not required, the equals sign can be used with either option
 form and whitespace before and/or after the \[oq]=\[cq] is permitted.
 
 .TP 3
+\-\fBA\fR, \fB\-\-apply-defaults\fR
+Run \*(We with build defaults only, ignoring all configuration files except
+/etc/toprc.
+This option, when specified, must be the only command line option present.
+
+.TP 3
 \-\fBb\fR, \fB\-\-batch\fR
 Starts \*(We in Batch mode, which could be useful for sending output
 from \*(We to other programs or to a file.
