@@ -82,7 +82,7 @@ enum norm_nls {
    TIME_accumed_fmt, UNKNOWN_cmds_txt, UNKNOWN_opts_fmt, VERSION_opts_fmt,
    WORD_abv_mem_txt, WORD_abv_swp_txt, WORD_allcpus_txt, WORD_another_txt,
    WORD_eachcpu_fmt, WORD_exclude_txt, WORD_include_txt, WORD_noneone_txt,
-   WORD_process_txt, WORD_threads_txt, WRITE_rcfile_fmt,
+   WORD_process_txt, WORD_threads_txt, WRITE_rcfile_fmt, XTRA_args_no_fmt,
    XTRA_badflds_fmt, XTRA_fixwide_fmt, XTRA_modebad_txt, XTRA_vforest_fmt,
    XTRA_warncfg_txt, XTRA_warnold_txt, XTRA_winsize_txt, X_BOT_capprm_fmt,
    X_BOT_cmdlin_fmt, X_BOT_ctlgrp_fmt, X_BOT_envirn_fmt, X_BOT_msglog_txt,
