@@ -1,6 +1,8 @@
 procps-ng-NEXT
 ---------------
   * local: guard SIGPOLL for MacOS                         merge !246
+  * top: provides for ignoring configuration file(s)       issue #365
+
 procps-ng-4.0.5
 ---------------
   * library
